# pythmpg

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  TODO.txt  pyproject.toml  readthedocs.yaml
.github/workflows/: docs.yml  pypi-publish.yml  tests.yml
docs/source/: api.rst  conf.py  index.rst  introduction.rst  user_guide.rst
docs/source/examples/: MPG-exten.xlsx  MPG-min-bool.xlsx  MPG-template.xlsx  mpg_exten.csv  mpg_exten.py  mpg_min.py
examples/: MPG-exten.xlsx  MPG-min-bool.xlsx  MPG-min-num.xlsx  MPG-template.xlsx  mpg_exten.csv  mpg_exten.out  mpg_exten.py  mpg_jahn_test.csv  mpg_jahn_test.out  mpg_jahn_test.py  mpg_min.out  mpg_min_bool.csv
notes/: DEV.md
pythmpg/: __init__.py  mpg_dicts.py  mpg_tools.py  parse_jahn.py  pg_elements.py  spreadsheet.py
tests/: conftest.py  test_mpg.py  test_mpg_dicts.py  test_mpg_tools.py  test_parse_jahn.py  test_pg_elements.py  test_ref.csv  test_spreadsheet.py
