[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythmpg"
version = "1.0.0"
description = "MPG project"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Andrea Urru", email = "au168@physics.rutgers.edu" },
    {name = "Turan Birol", email = "tbirol@umn.edu" },
    {name = "Trey Cole", email = "bc889@physics.rutgers.edu" },
    {name = "David Vanderbilt", email = "dhv@physics.rutgers.edu" }
]
dependencies = [
    "numpy",
]
 
[project.optional-dependencies]
docs = [
    "sphinx", "furo", "sphinx-autobuild"
]
tests = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["pythmpg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
